Add attempt at one query join